--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/ssr": "^20.1.6",
     "express": "^5.1.0",
     "material-icons": "^1.13.14",
+    "ng-block-ui": "^4.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
